infra/k8s/backend/1-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: staging
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: music-service-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
          name: php-fpm
          protocol: TCP
        volumeMounts:
          - name: php-ini-config-volume
            mountPath: /usr/local/etc/php/php.ini
            subPath: php.ini

      - name: packages 
        image: music-service-packages:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: packages-http
          protocol: TCP

      volumes:
        - name: php-ini-config-volume
          configMap:
            name: php-ini-config
