infra/k8s/backend/2-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: staging
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend
    port: 9000
  - name: packages-nginx
    port: 80
